Do some bumps, Java to 13 mong them